chore: file import cjs to es

--- a/packages/zelda-i180-lint/package.json
+++ b/packages/zelda-i180-lint/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "i180/lint": "./bin"
+  },
   "scripts": {
     "dev": "father dev",
     "build": "father build",
