--- a/packages/zelda-i180-lint/package.json
+++ b/packages/zelda-i180-lint/package.json
@@ -2,10 +2,14 @@
   "name": "zelda-i180-lint",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "bin": {
-    "i180/lint": "./bin"
+    "lint-i180": "dist/index.js"
   },
+  "files": [
+    "dist",
+    "readme.md"
+  ],
   "scripts": {
     "dev": "father dev",
     "build": "father build",
@@ -16,10 +20,6 @@
   "keywords": [],
   "author": "",
   "license": "MIT",
-  "files": [
-    "dist",
-    "compiled"
-  ],
   "devDependencies": {
     "peggy": "^3.0.0"
   }
