--- a/packages/zelda-i180-lint/package.json
+++ b/packages/zelda-i180-lint/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "zelda-i180-lint",
-  "version": "0.0.2",
+  "name": "zelda-en-lint",
+  "version": "0.0.1",
   "description": "",
   "main": "dist/index.js",
   "bin": {
-    "lint-i180": "dist/index.js"
+    "lint-en": "dist/index.js"
   },
   "files": [
     "dist",
