--- a/packages/zelda-i180-lint/package.json
+++ b/packages/zelda-i180-lint/package.json
@@ -12,7 +12,6 @@
     "package.json"
   ],
   "scripts": {
-    "dev": "father dev",
     "build": "father build",
     "build:deps": "father prebundle",
     "prepublishOnly": "father doctor && npm run build",
@@ -23,6 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "cleye": "^1.3.2",
+    "consola": "^3.1.0",
     "peggy": "^3.0.0"
   }
 }
