--- a/packages/zelda-i180-lint/package.json
+++ b/packages/zelda-i180-lint/package.json
@@ -15,7 +15,8 @@
     "build": "father build",
     "build:deps": "father prebundle",
     "prepublishOnly": "father doctor && npm run build",
-    "test": "jest --maxWorkers 2"
+    "test": "jest --maxWorkers 2",
+    "lint-and-publish": "npm run lint-and-publish"
   },
   "keywords": [],
   "author": "",
