--- a/packages/zelda-i180-lint/package.json
+++ b/packages/zelda-i180-lint/package.json
@@ -16,7 +16,7 @@
     "build:deps": "father prebundle",
     "prepublishOnly": "father doctor && npm run build",
     "test": "jest --maxWorkers 2",
-    "lint-and-publish": "npm run lint-and-publish"
+    "lint-publish": "npm run lint-and-publish"
   },
   "keywords": [],
   "author": "",
