--- a/packages/zelda-publish-lint/publish.config.json
+++ b/packages/zelda-publish-lint/publish.config.json
@@ -1,4 +1,32 @@
 {
   "name": "lint-and-publish",
-  "version": "0.0.1"
+  "version": "0.0.2",
+  "description": "",
+  "main": "dist/index.js",
+  "bin": {
+    "lint-and-publish": "dist/index.js"
+  },
+  "files": [
+    "dist",
+    "readme.md",
+    "package.json"
+  ],
+  "scripts": {
+    "start": "father build && node dist/index.js",
+    "build": "father build",
+    "build:deps": "father prebundle",
+    "test": "jest --maxWorkers 2",
+    "lint-and-publish": "npm run start"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
+  "dependencies": {
+    "cleye": "^1.3.2",
+    "consola": "^3.1.0",
+    "fs-extra": "^11.1.1"
+  },
+  "devDependencies": {
+    "@types/fs-extra": "^11.0.1"
+  }
 }
