--- a/package.json
+++ b/package.json
@@ -24,14 +24,12 @@
     "husky": "^8.0.1",
     "jest": "^27",
     "ts-node": "^10",
-    "typescript": "^4"
+    "typescript": "^4",
+    "lint-and-publish": "workspace:^"
   },
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
     ]
-  },
-  "dependencies": {
-    "lint-and-publish": "workspace:^"
   }
 }
