--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "father": "^4.1.5",
     "husky": "^8.0.1",
     "jest": "^27",
-    "lint-and-publish": "workspace:^",
+    "lint-and-publish": "0.0.6",
     "ts-node": "^10",
     "typescript": "^4"
   },
