--- a/packages/zelda-publish-lint/package.json
+++ b/packages/zelda-publish-lint/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lint-and-publish",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "",
   "main": "dist/index.js",
   "bin": {
@@ -24,7 +24,9 @@
   "dependencies": {
     "cleye": "^1.3.2",
     "consola": "^3.1.0",
-    "fs-extra": "^11.1.1"
+    "fs-extra": "^11.1.1",
+    "glob": "^10.3.1",
+    "yaml": "^2.3.1"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.1"
