--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "build": "pnpm -r build",
     "prepare": "husky install",
-    "changeset": "npx changeset",
-    "release": "npx changeset version",
-    "publish-all": "pnpm -r lint-publish",
+    "changeset": "changeset",
+    "release": "changeset version",
+    "publish-all": "pnpm build && changeset publish",
     "test": "pnpm -r test"
   },
   "keywords": [],
