feat: zelda-image-compression complete

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
     ],
     "unused-imports/no-unused-imports": "off",
     "antfu/top-level-function": "off",
-    "no-console": "off"
+    "no-console": "off",
+    "@typescript-eslint/indent": "off"
   }
 }
