--- a/packages/zelda-image-compression/package.json
+++ b/packages/zelda-image-compression/package.json
@@ -13,6 +13,7 @@
     "package.json"
   ],
   "scripts": {
+    "dev": "node dist/index.js ",
     "build": "father build",
     "test": "jest --maxWorkers 2"
   },
@@ -21,6 +22,17 @@
   "license": "MIT",
   "dependencies": {
     "cleye": "^1.3.2",
-    "consola": "^3.1.0"
+    "consola": "^3.1.0",
+    "fs-extra": "^11.1.1",
+    "imagemin": "^8.0.1",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-pngquant": "^9.0.2",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@types/fs-extra": "^11.0.2",
+    "@types/imagemin": "^8.0.1",
+    "@types/imagemin-jpegtran": "^5.0.2",
+    "@types/uuid": "^9.0.4"
   }
 }
