fix: compression not handle apng

--- a/packages/zelda-image-compression/package.json
+++ b/packages/zelda-image-compression/package.json
@@ -29,6 +29,7 @@
     "imagemin": "^8.0.1",
     "imagemin-jpegtran": "^7.0.0",
     "imagemin-pngquant": "^9.0.2",
+    "is-apng": "^1.0.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
