--- a/packages/zelda-image-compression/package.json
+++ b/packages/zelda-image-compression/package.json
@@ -23,6 +23,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "apng-assembler": "^1.0.2",
+    "apng-js": "^1.1.1",
     "cleye": "^1.3.2",
     "consola": "^3.1.0",
     "fs-extra": "^11.1.1",
@@ -30,6 +32,7 @@
     "imagemin-jpegtran": "^7.0.0",
     "imagemin-pngquant": "^9.0.2",
     "is-apng": "^1.0.1",
+    "sharp": "^0.32.6",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
